--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="avisos-container" class="container">
         <h2>Painel de Avisos</h2>
         <div id="aviso" class="aviso-amarelo">
-            <p id="texto-aviso">Este é um aviso importante!</p>
+            <p id="texto-aviso">Estamos a 0 dias sem ouvir a BRUNA dizer "Eu estou CANSADA"</p>
         </div>
         <button id="editar-aviso">Editar Aviso</button>
     </div>
